resources/tests/invalid_syntax/condition_bool.ct
//`Expression should be of type 'bool'!
//1
fn main()->i64 {
  if 10:
    return 10;
  return 11;
}